# edoras_ws

./: README.md  cfs.Dockerfile  docker-compose-dev.yml  docker-compose-prod.yml  edoras.Dockerfile  env.sh  fsw.Dockerfile  rosws.Dockerfile
config/: fsw_entrypoint.sh  rosgsw_entrypoint.sh
docs/: build_docker_images.md  example_gateway_dual.md  example_gateway_single.md  example_mars_rover.md
rosws/src/sandbox/: CMakeLists.txt  package.xml
rosws/src/sandbox/include/sandbox/: serialized_transfer.h
rosws/src/sandbox/src/: serialized_transfer.cpp
scripts/: build_cfe.sh  build_edoras.sh  build_images.sh  build_rosws.sh  clone_code.sh
